# handler/updateOpening.go
@@ -7,6 +7,19 @@ import (
 	"github.com/lucasbarbosaalves/go-api/schemas"
 )
 
+// @BasePath /api/v1
+
+// @Summary Update opening
+// @Description Update a job opening
+// @Tags Openings
+// @Accept  json
+// @Produce  json
+// @Param id query string true "Opening identification"
+// @Param opening body UpdateOpeningResponse true "Opening data tp update"
+// @Success 200 {object} UpdateOpeningResponse
+// @Failure 400 {object} ErrorResponse
+// @Failure 404 {object} ErrorResponse
+// @Router /opening [put]
 func UpdateOpeningHandler(ctx *gin.Context) {
 	request := UpdateOpeningRequest{}
 
